<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="upload_image">Upload Gambar</string>
    <string name="upload_hint">Pilih gambar dari galeri untuk menganalisis</string>
    <string name="preview_image">Preview gambar</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="back">Kembali</string>
    <string name="result_image">Gambar Hasil</string>
    <string name="result">Hasil Analisis</string>
    <string name="label">Label Analisis</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_news">News</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="img_cancer">Cancer Image</string>
    <string name="percentage">Percentage Positive Cancer</string>
    <string name="description">Deskripsi</string>
    <string name="title">Judul Berita</string>
    <string name="img_news">Gambar Berita</string>
    <string name="error">Terjadi Kesalahan : </string>
    <string name="no_internet_connection">Tidak ada koneksi internet</string>
    <string name="no_history">Tidak ada data history</string>
    <string name="retry">Coba Lagi</string>
</resources>